--- a/src/assets/styles/base/_global.scss
+++ b/src/assets/styles/base/_global.scss
@@ -3,4 +3,5 @@ body {
   font-size: $font-size-base;
   color: $color-dark;
   box-sizing: border-box;
+  min-height: 100vh; // hs: https://www.freecodecamp.org/news/html-page-width-height/ 참고하여 작성
 }
