feat: 전체 높이가 화면에 꽉 차도록 _global 수정

--- a/src/assets/styles/base/_global.scss
+++ b/src/assets/styles/base/_global.scss
@@ -3,5 +3,11 @@ body {
   font-size: $font-size-base;
   color: $color-dark;
   box-sizing: border-box;
-  min-height: 100vh; // hs: https://www.freecodecamp.org/news/html-page-width-height/ 참고하여 작성
+  min-height: 100vh;
+  height: 100vh; // hs: https://www.freecodecamp.org/news/html-page-width-height/ 참고하여 작성
+
+  #root {
+    height: 100%;
+    min-height: 100%;
+  }
 }
