--- a/src/assets/styles/base/_global.scss
+++ b/src/assets/styles/base/_global.scss
@@ -3,8 +3,10 @@ body {
   font-size: $font-size-base;
   color: $color-dark;
   box-sizing: border-box;
+
+  // hs: https://www.freecodecamp.org/news/html-page-width-height/ 참고하여 작성
   min-height: 100vh;
-  height: 100vh; // hs: https://www.freecodecamp.org/news/html-page-width-height/ 참고하여 작성
+  height: 100vh;
 
   #root {
     height: 100%;
