--- a/src/components/nav/index.module.scss
+++ b/src/components/nav/index.module.scss
@@ -1,10 +1,14 @@
 .wrapper {
   display: flex;
   justify-content: space-between;
-  margin-top: 10;
-  margin-bottom: 28px;
   padding: 0 2.375em;
-  width: 375px;
+
+  position: fixed;
+  bottom: 28px;
+  z-index: 1;
+  max-width: 600px;
+  min-width: 320px;
+  width: 100%;
 }
 
 .item {
@@ -19,7 +23,7 @@
   &.selected {
     .shadow {
       background-color: #c4c4c4;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
       transition: all 0.3s ease-out;
       opacity: 0.6;
     }
