feat: nav width 수정

--- a/src/components/nav/index.module.scss
+++ b/src/components/nav/index.module.scss
@@ -1,10 +1,10 @@
 .wrapper {
   display: flex;
   justify-content: space-between;
-  margin-top: 10;
+  margin-top: 10px;
   margin-bottom: 28px;
   padding: 0 2.375em;
-  width: 375px;
+  width: 100%;
 }
 
 .item {
