--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -1,3 +1,79 @@
-.testColor {
-  color: red;
+.homeContainer {
+  width: 100%;
+  height: 100%;
+  padding: 0 38px;
+  background: linear-gradient(
+    to top,
+    rgba(79, 118, 44, 50%) 0%,
+    rgba(127, 181, 73, 60%) 10px,
+    rgba(255, 255, 255, 0%) 60px,
+    rgba(189, 243, 249, 100%) 70%,
+    rgba(124, 230, 242, 100%)
+  );
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .noticeBoxWrapper {
+    width: 100%;
+    margin-top: 80px;
+
+    .noticeBox {
+      width: 100%;
+      height: 42px;
+      padding: 0 10px;
+      margin-top: 20px;
+      border-radius: 8px;
+      border: 1px solid #d9d9d9;
+      background-color: white;
+      line-height: 42px;
+      font-size: 16px;
+    }
+  }
+
+  .speechBubbleWrapper {
+    position: relative;
+    align-self: flex-end;
+    min-width: 50%;
+    max-width: 120px;
+    min-height: 100px;
+    border-radius: 50%;
+    background-color: white;
+    margin-top: 48px;
+    box-shadow:
+      4px 4px 12px 8px rgba(95, 171, 181, 0.25),
+      1px 2px 8px 1px rgba(95, 171, 181, 0.25) inset;
+
+    &::before {
+      position: absolute;
+      content: '';
+      border-width: 16px;
+      border-style: solid;
+      border-color: rgba(255, 255, 255, 0) rgba(255, 255, 255, 0) white
+        rgba(255, 255, 255, 0);
+      border-right: white;
+      top: 99%;
+      left: 39.5%;
+      transform: rotate(180deg);
+    }
+
+    .speechBubble {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      padding: 28px;
+    }
+  }
+  .pokemonGifWrapper {
+    margin-top: 20px;
+
+    .pokemonGif {
+      width: 138px;
+      height: 138px;
+      margin: 0 auto;
+      object-fit: contain;
+    }
+  }
 }
