--- a/src/components/InfoCard/index.module.scss
+++ b/src/components/InfoCard/index.module.scss
@@ -1,18 +1,19 @@
 .area {
   position: relative;
+  width: fit-content;
+  height: fit-content;
 }
 
 .titleBox {
-  position: absolute;
+  position: relative;
+  top: 0;
   z-index: 2;
-
   background-color: #b13500;
   border-radius: 3px 3px 0 0;
   border: 3px solid #dad7d7;
   width: fit-content;
   border-bottom: none;
   padding: 0.6em 2em 0.1em 2em;
-
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -26,13 +27,12 @@
 }
 
 .infoBox {
-  position: absolute;
-  top: 30.5px;
+  position: relative;
+  top: -3px;
   background-color: #b13500;
   min-width: 200px;
   min-height: 100px;
   border: 3px solid #dad7d7;
   padding: 1em;
-
   box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.5);
 }
