--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -1,3 +1,5 @@
+@use '../../assets/styles/base/mixins' as *;
+
 .homeContainer {
   width: 100%;
   height: 100%;
@@ -75,5 +77,61 @@
       margin: 0 auto;
       object-fit: contain;
     }
+  }
+}
+
+.infoWrapper {
+  width: 100%;
+  @include pretendard-bold;
+}
+
+.infoBox {
+  background-color: #7ea570;
+  border-radius: 3px;
+  border: 3px solid #b1bbaa;
+  border-left-width: 5px;
+  border-right-width: 5px;
+  padding: 0.4em 1em;
+  font-size: 1rem;
+  color: #dfefd9;
+  text-shadow: 1.7px 1.7px 0 rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+
+  .info {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .progressWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    gap: 12px;
+    width: 100%;
+
+    .progressBar {
+      width: 84%;
+      height: 20px;
+      border-radius: 5px;
+      background-color: #000000;
+      border: 2px solid #dadada;
+      overflow: hidden;
+
+      .fill {
+        height: 100%;
+        background-color: #14f11d;
+        transition: width 0.5s ease-in-out;
+        border-radius: 2px;
+      }
+    }
+
+    span {
+      font-size: 0.8rem;
+    }
+  }
+  .currentExp {
+    text-align: right;
   }
 }
