--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -2,7 +2,7 @@
 
 .homeContainer {
   width: 100%;
-  height: 100%;
+  height: 115%;
   padding: 0 38px;
   background: linear-gradient(
     to top,
@@ -133,5 +133,79 @@
   }
   .currentExp {
     text-align: right;
+  }
+}
+
+.statusWrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 15px;
+}
+.statusBox {
+  position: relative;
+  min-width: 155px;
+  min-height: 60px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  box-shadow: 6px 6px 0 rgba(0, 0, 0, 0.3);
+  padding: 0.8em 1em 0.2em 1em;
+  font-size: 1.125rem;
+  margin-top: 20px;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 92%;
+    height: 82%;
+    background-color: rgba(171, 205, 159, 0.5);
+    border-radius: 0 0 10px 0;
+    z-index: 1;
+  }
+
+  span {
+    z-index: 2;
+    width: 100%;
+  }
+}
+
+.run {
+  position: relative;
+  padding-bottom: 15px; /* 두 선 사이의 간격 조정 */
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  height: 100%;
+  width: 60%;
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    background-color: #abcd9f;
+  }
+
+  &::before {
+    bottom: 9px; /* 얇은 선의 위치 조정 */
+    height: 2px; /* 얇은 선의 두께 */
+  }
+
+  &::after {
+    bottom: 0; /* 두꺼운 선의 위치 조정 */
+    height: 4px; /* 두꺼운 선의 두께 */
+  }
+
+  span {
+    color: #dfefd9;
+    font-size: 1.25rem;
+    @include pretendard-bold;
   }
 }
