feat: Home 포켓몬 그림자 추가

--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -70,12 +70,26 @@
   }
   .pokemonGifWrapper {
     margin-top: 20px;
+    position: relative; /* position relative 설정 */
 
     .pokemonGif {
       width: 138px;
       height: 138px;
       margin: 0 auto;
       object-fit: contain;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -10px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 150%;
+      height: 30px;
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 50%;
+      z-index: -1;
     }
   }
 }
