--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -170,6 +170,7 @@
   padding: 0.8em 1em 0.2em 1em;
   font-size: 1.125rem;
   margin-top: 20px;
+  cursor: pointer;
 
   &::after {
     content: '';
@@ -183,9 +184,14 @@
     z-index: 1;
   }
 
-  span {
+  .statusText {
     z-index: 2;
     width: 100%;
+    color: #000;
+  }
+
+  &.running .statusText {
+    color: #ff4d00;
   }
 }
 
