feat: 랭킹 모달 작업

--- a/src/layouts/default/index.module.scss
+++ b/src/layouts/default/index.module.scss
@@ -1,5 +1,6 @@
 .commonLayoutWrapper {
   // hsPyo: 무신사 style 스펙 참고하여 작성
+  position: relative;
   max-width: 600px;
   min-width: 320px;
   min-height: 100%;
