--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -17,19 +17,20 @@
   align-items: center;
   justify-content: space-between;
 
-  .noticeBoxWrapper {
+  .iconWrapper {
     width: 100%;
+    align-self: flex-start;
 
-    .noticeBox {
-      width: 100%;
-      height: 42px;
-      padding: 0 10px;
-      margin-top: 20px;
-      border-radius: 8px;
-      border: 1px solid #d9d9d9;
-      background-color: white;
-      line-height: 42px;
-      font-size: 16px;
+    .icon {
+      width: fit-content;
+      border-radius: 4px;
+      box-shadow: -5px -5px 8px 4px rgba(95, 171, 181, 0.25);
+      cursor: pointer;
+
+      &:first-child {
+        margin-top: 12px;
+        margin-bottom: 20px;
+      }
     }
   }
 
