feat: 마이페이지 포켓몬 리스트 & 러닝 기록 API 구현

--- a/src/pages/mypage/index.module.scss
+++ b/src/pages/mypage/index.module.scss
@@ -102,3 +102,10 @@
     @include pretendard-bold;
   }
 }
+.noRecordMessage {
+  text-align: center;
+  color: #666;
+  font-size: 1.2em;
+  @include pretendard-bold;
+  padding: 10px;
+}
