--- a/src/components/popup/index.module.scss
+++ b/src/components/popup/index.module.scss
@@ -10,7 +10,7 @@
   z-index: 999;
 }
 
-.popup {
+.popupWrapper {
   position: fixed;
   left: 50%;
   top: 30%;
@@ -18,7 +18,8 @@
   max-width: 560px;
   min-width: 300px;
   width: 90%;
-  padding: 4em 1em 1em 1em;
+  height: 30%;
+  padding: 2em 1em 78px 1em;
   background-color: #ffffff;
   border: 4px solid #000000;
   border-radius: 2px;
@@ -26,14 +27,27 @@
   z-index: 1000;
   text-align: center;
 
-  h2 {
-    font-size: 1.125rem;
-    @include pretendard-bold;
-    font-weight: bold;
-    margin-bottom: 30px;
+  .popup {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+
+    > h2 {
+      font-size: 1.125rem;
+      @include pretendard-bold;
+      font-weight: bold;
+
+      .content {
+        margin: 20px 0;
+      }
+    }
   }
 
   button {
+    position: absolute;
+    bottom: 8px;
+    left: 50%;
+    transform: translateX(-50%);
     margin-top: 20px;
     padding: 10px 20px;
     font-size: 1.5rem;
@@ -42,7 +56,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    width: 100%;
+    width: 90%;
     transition: background-color 0.3s ease;
 
     &:hover {
