--- a/src/pages/mypage/index.module.scss
+++ b/src/pages/mypage/index.module.scss
@@ -54,7 +54,16 @@
   width: 90%;
   height: auto;
   aspect-ratio: 1; /* 카드의 가로와 세로 비율을 1:1로 설정 */
+  border: none;
+  cursor: pointer;
 
+  &:hover {
+    opacity: 0.9;
+  }
+
+  &:active {
+    opacity: 0.8;
+  }
   img {
     width: 60%;
     height: auto;
