--- a/src/pages/mypage/index.module.scss
+++ b/src/pages/mypage/index.module.scss
@@ -6,7 +6,6 @@
   border-radius: 10px;
   display: flex;
   align-items: center;
-  justify-content: center;
   box-shadow: 6px 6px 0 rgba(0, 0, 0, 0.3);
 
   &::after {
@@ -25,7 +24,7 @@
 .area {
   width: 100%;
   height: 100%;
-  padding-top: 55px;
+  padding: 55px 0 120px;
   gap: 65px;
 
   display: flex;
@@ -63,6 +62,7 @@
 
 .pokeCard {
   @include cardStyle(90%, 90%);
+  justify-content: center;
   width: 90%;
   height: auto;
   aspect-ratio: 1; /* 카드의 가로와 세로 비율을 1:1로 설정 */
@@ -90,13 +90,13 @@
 .recordWrapper {
   @include cardStyle(97%, 90%);
   min-width: 300px;
-  min-height: 100px;
   width: 90%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 22px;
   gap: 15px;
+  overflow: scroll;
 }
 
 .record {
