--- a/src/assets/fonts/font.css
+++ b/src/assets/fonts/font.css
@@ -1,51 +1,64 @@
 @font-face {
-  font-family: "Pretendard Black";
+  font-family: 'Pretendard Black';
   font-weight: 900;
   font-display: swap;
-  src: local("Pretendard Black"),
-    url("./woff2-subset/Pretendard-Black.subset.woff2") format("woff2");
+  src:
+    local('Pretendard Black'),
+    url('./woff2-subset/Pretendard-Black.subset.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: "Pretendard ExtraBold";
+  font-family: 'Pretendard ExtraBold';
   font-weight: 800;
   font-display: swap;
-  src: local("Pretendard ExtraBold"),
-    url("./woff2-subset/Pretendard-ExtraBold.subset.woff2") format("woff2");
+  src:
+    local('Pretendard ExtraBold'),
+    url('./woff2-subset/Pretendard-ExtraBold.subset.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: "Pretendard Bold";
+  font-family: 'Pretendard Bold';
   font-weight: 700;
   font-display: swap;
-  src: local("Pretendard Bold"),
-    url("./woff2-subset/Pretendard-Bold.subset.woff2") format("woff2");
+  src:
+    local('Pretendard Bold'),
+    url('./woff2-subset/Pretendard-Bold.subset.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: "Pretendard SemiBold";
+  font-family: 'Pretendard SemiBold';
   font-weight: 600;
   font-display: swap;
-  src: local("Pretendard SemiBold"),
-    url("./woff2-subset/Pretendard-SemiBold.subset.woff2") format("woff2");
+  src:
+    local('Pretendard SemiBold'),
+    url('./woff2-subset/Pretendard-SemiBold.subset.woff2') format('woff2');
 }
 @font-face {
-  font-family: "Pretendard Medium";
+  font-family: 'Pretendard Medium';
   font-weight: 500;
   font-display: swap;
-  src: local("Pretendard Medium"),
-    url("./woff2-subset/Pretendard-Medium.subset.woff2") format("woff2");
+  src:
+    local('Pretendard Medium'),
+    url('./woff2-subset/Pretendard-Medium.subset.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: "Pretendard Regular";
+  font-family: 'Pretendard Regular';
   font-weight: 400;
   font-display: swap;
-  src: local("Pretendard Regular"),
-    url("./woff2-subset/Pretendard-Regular.subset.woff2") format("woff2");
+  src:
+    local('Pretendard Regular'),
+    url('./woff2-subset/Pretendard-Regular.subset.woff2') format('woff2');
 }
 
+@font-face {
+  font-family: 'DOSIyagiMedium';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/DOSIyagiMedium.woff2')
+    format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   /* 기본 폰트 설정 */
-  font-family: "Pretendard Regular", sans-serif;
+  font-family: 'Pretendard Regular', sans-serif;
 }
