--- a/src/assets/styles/base/_mixins.scss
+++ b/src/assets/styles/base/_mixins.scss
@@ -5,13 +5,21 @@
 }
 
 @mixin pretendard-bold {
-  font-family: "Pretendard Bold", sans-serif;
+  font-family: 'Pretendard Bold', sans-serif;
 }
 
 @mixin pretendard-medium {
-  font-family: "Pretendard Medium", sans-serif;
+  font-family: 'Pretendard Medium', sans-serif;
 }
 
 @mixin pretendard-regular {
-  font-family: "Pretendard Regular", sans-serif;
+  font-family: 'Pretendard Regular', sans-serif;
+}
+
+@mixin dosiyagi-medium {
+  font-family: 'DOSIyagiMedium';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/DOSIyagiMedium.woff2')
+    format('woff2');
+  font-weight: normal;
+  font-style: normal;
 }
