--- a/src/components/InfoCard/index.module.scss
+++ b/src/components/InfoCard/index.module.scss
@@ -25,7 +25,8 @@
     font-weight: bold;
     font-size: 1rem;
     text-shadow: 1.7px 1.7px 0 rgba(0, 0, 0, 0.8);
-    @include pretendard-bold;
+    // @include pretendard-bold;
+    @include dosiyagi-medium;
   }
 }
 
