--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -71,6 +71,13 @@
         width: 100%;
         height: 100%;
         padding: 28px;
+
+        color: #333333;
+        font-weight: bold;
+        font-size: 1rem;
+        text-shadow: 0.8px 0.8px 0 rgba(0, 0, 0, 0.5);
+
+        @include dosiyagi-medium;
       }
     }
     .pokemonGifWrapper {
@@ -101,7 +108,6 @@
 
 .infoWrapper {
   width: 100%;
-  @include pretendard-bold;
 }
 
 .infoBox {
@@ -231,6 +237,5 @@
   span {
     color: #dfefd9;
     font-size: 1.25rem;
-    @include pretendard-bold;
   }
 }
