--- a/src/pages/intro/index.module.scss
+++ b/src/pages/intro/index.module.scss
@@ -1,4 +1,8 @@
+@use '../../assets/styles/base/mixins' as *;
+
 .introContainer {
+  @include dosiyagi-medium;
+
   width: 100%;
   height: 100%;
   background: linear-gradient(
