--- a/src/pages/mypage/index.module.scss
+++ b/src/pages/mypage/index.module.scss
@@ -129,20 +129,20 @@
   font-size: 1.2em;
   padding: 10px;
 }
-
-.skeleton {
-  width: 60%;
-  height: 60%;
-  background-color: #ddd;
-  border-radius: 10px;
-  animation: shimmer 1.5s infinite linear;
-}
-
 @keyframes shimmer {
   0% {
-    background-position: -100% 0;
+    background-position: -200% 0;
   }
   100% {
-    background-position: 100% 0;
+    background-position: 200% 0;
   }
+}
+
+.skeleton {
+  width: 90%;
+  height: 90%;
+  background: linear-gradient(90deg, #ddd 0%, #c8c5c5 50%, #ddd 100%);
+  background-size: 200% 100%;
+  border-radius: 10px;
+  animation: shimmer 1.5s infinite;
 }
