--- a/src/pages/intro/index.module.scss
+++ b/src/pages/intro/index.module.scss
@@ -3,8 +3,12 @@
 .introContainer {
   @include dosiyagi-medium;
 
-  width: 100%;
-  height: 100%;
+  max-width: 600px;
+  min-width: 320px;
+  min-height: 100%;
+  height: 110%;
+  margin: 0 auto;
+
   background: linear-gradient(
     to bottom,
     rgba(124, 230, 242, 100%),
