feat: 첫 번째로 달렸던 구에대해 지도에 표기

--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -199,6 +199,10 @@
     z-index: 2;
     width: 100%;
     color: #000;
+
+    @media (max-width: 600px) {
+      font-size: 1rem;
+    }
   }
 
   &.running .statusText {
